--- a/screw/pom.xml
+++ b/screw/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 	<modules>
 	</modules>
 	<parent>
@@ -18,6 +18,7 @@
 	<description>Demo project for mercadona spring boot</description>
 	<properties>
 		<java.version>11</java.version>
+		<start-class>com.opbaquero.screw.ScrewApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
