--- a/screw/src/main/resources/application.properties
+++ b/screw/src/main/resources/application.properties
@@ -1,8 +1,4 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/springdb
-#spring.datasource.username=opbaquero
-#spring.datasource.password=5809GJF_honda
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#logging.level.org.hibernate.SQL=debug
-#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
-#server.port=5000
-#security.user.password=12345
+server.port=5000
+spring.security.user.name=oscar
+spring.security.user.password=oscarp
+spring.security.user.roles=manager
