Exceptions handlers & more

--- a/screw/src/main/resources/queries/jdbc-screw-nonamed-queries.properties
+++ b/screw/src/main/resources/queries/jdbc-screw-nonamed-queries.properties
@@ -1,1 +1,2 @@
 products.findProductById = SELECT id_products, name_product FROM products p WHERE p.id_products = :productId;
+suppliers.findAllSuppliers = SELECT id_suppliers, name_suppliers FROM suppliers s;
