--- a/screw/pom.xml
+++ b/screw/pom.xml
@@ -122,6 +122,7 @@
 							<strictSpec>true</strictSpec>
 							<generateApiTests>false</generateApiTests>
 							<generateModelTests>false</generateModelTests>
+							<modelNameSuffix>DTO</modelNameSuffix>
 							<configOptions>
 								<controllerThrowsExceptions>java.io.IOException,com.example.NotFoundException</controllerThrowsExceptions>
 								<library>spring-mvc</library>
